# shyft

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  COPYING  README.md  VERSION  build_api.cmd  build_api_cmake.sh  buildconfig.yaml  requirements.txt  set_version.cmd  setup.cfg  setup.py
api/: api.cbp  api.cpp  api.h  api.vcxproj  api_pch.cpp  api_pch.h  api_serialization.cpp  api_state.h
api/boostpython/: CMakeLists.txt  api.cpp  api_actual_evapotranspiration.cpp  api_cell_environment.cpp  api_dtss.cpp  api_gamma_snow.cpp  api_geo_cell_data.cpp  api_geo_point.cpp  api_glacier_melt.cpp  api_hbv_actual_evapotranspiration.cpp  api_hbv_physical_snow.cpp  api_hbv_snow.cpp  api_hbv_soil.cpp  api_hbv_tank.cpp  api_interpolation.cpp  api_kalman.cpp  api_kirchner.cpp  api_precipitation_correction.cpp  api_priestley_taylor.cpp  api_pt_gs_k.cpp  api_radiation.cpp  api_radiation_dingman.cpp  api_region_environment.cpp  api_routing.cpp  api_skaugen.cpp  api_state.cpp  api_target_specification.cpp  api_time_axis.cpp  api_time_series.cpp  api_utctime.cpp  api_vectors.cpp  boostpython.cbp  boostpython_pch.cpp  boostpython_pch.h  expose.h  expose_statistics.h  hbv_stack.cpp  pt_gs_k.cpp  pt_hps_k.cpp  pt_hs_k.cpp  (+2 more)
api/python/: api.python.cbp  api.python.vcxproj  hbv_stack.python.vcxproj  pt_gs_k.python.vcxproj  pt_hps_k.python.vcxproj  pt_hs_k.python.vcxproj  pt_ss_k.python.vcxproj
build_support/: build_dependencies.sh  jenkins.sh  shyft_core-config.cmake  win_build_dependencies.sh  win_build_shyft.cmd  win_conda_deploy.cmd
conda_recipe/: conda_build_config.yaml  meta.yaml
core/: CMakeLists.txt  actual_evapotranspiration.h  bayesian_kriging.h  cell_model.h  core.cbp  core.vcxproj  core.vcxproj.filters  core_archive.h  core_serialization.cpp  core_serialization.h  dream_optimizer.cpp  dream_optimizer.h  dtss.cpp  dtss.h  dtss_cache.h  dtss_client.cpp  dtss_client.h  dtss_db.h  dtss_krls.h  dtss_msg.h  dtss_mutex.h  dtss_url.h  experimental.cpp  experimental.h  expression_serialization.cpp  expression_serialization.h  gamma_snow.h  geo_cell_data.h  geo_point.h  glacier_melt.h  hbv_actual_evapotranspiration.h  hbv_physical_snow.h  hbv_snow.h  hbv_snow_common.h  hbv_soil.h  hbv_stack.h  hbv_stack_cell_model.h  hbv_tank.h  hydro_functions.h  inverse_distance.h  (+41 more)
shyft/: __init__.py
shyft/api/: __init__.py
shyft/api/hbv_stack/: __init__.py
shyft/api/pt_gs_k/: __init__.py
shyft/api/pt_hps_k/: __init__.py
shyft/api/pt_hs_k/: __init__.py
shyft/api/pt_ss_k/: __init__.py
shyft/orchestration/: plotting.py  simulator.py
shyft/orchestration/configuration/: config_interfaces.py  dict_configs.py  yaml_configs.py  yaml_constructors.py
shyft/orchestration/simulators/: config_simulator.py
shyft/pyapi/: selector_ts.py
shyft/repository/: default_state_repository.py  deserialize_region_repository.py  geo_ts_repository_collection.py  interfaces.py  interpolation_parameter_repository.py  yaml_state_repository.py
shyft/repository/netcdf/: cf_geo_ts_repository.py  cf_region_model_repository.py  cf_ts_repository.py  cf_ts_store.py  concat_data_repository.py  erainterim_data_repository.py  gfs_data_repository.py  met_netcdf_data_repository.py  senorge_data_repository.py  time_conversion.py  utils.py  wrf_data_repository.py  wx_repository.py
shyft/repository/testsupport/: time_series.py
shyft/tests/: test_cf_region_model_repository.py  test_concat_data_repository.py  test_config_simulator.py  test_forecast_selection_criteria.py  test_geo_ts_repository_collection.py  test_gfs_repository.py  test_met_netcdf_data_respository.py  test_netcdf_rw.py  test_netcdftime.py  test_senorge_repository.py  test_simple_simulator.py  test_wrf_respository.py  test_wx_repository.py
shyft/tests/api/: test_bucket_ts.py  test_calendar_and_time.py  test_calibration_types.py  test_convolve_ts.py  test_decode_ts.py  test_dtss.py  test_geo_cell_data.py  test_inside_ts.py  test_interpolation.py  test_kalman.py  test_pow.py  test_quantile_mapping.py  test_region_model_stacks.py  test_time_axis.py  test_time_series.py  test_time_series_derivative.py  test_time_series_use_time_axis_from.py  test_url_utils.py  test_vector_create.py  test_vectors.py  test_win_short_path.py
shyft/tests/netcdf/: neanidelva_calibration.yaml  neanidelva_datasets.yaml  neanidelva_interpolation.yaml  neanidelva_model.yaml  neanidelva_simulation.yaml
shyft/tests/pyapi/: test_selector_ts.py
test/: CMakeLists.txt  actual_evapotranspiration_test.cpp  api_test.cpp  bayesian_kriging_test.cpp  calibration_test.cpp  cell_builder_test.cpp  dtss_db_test.cpp  dtss_krls_pred_db_test.cpp  dtss_stress_test.cpp  dtss_test.cpp  dtss_url_test.cpp  evapotranspiration_test.cpp  gamma_snow_test.cpp  geo_test.cpp  hbv_actual_evapotranspiration_test.cpp  hbv_physical_snow_test.cpp  hbv_snow_test.cpp  hbv_stack_test.cpp  inverse_distance_test.cpp  kalman_test.cpp  kirchner_test.cpp  kriging_test.cpp  max_abs_average_accessor_test.cpp  merge_test.cpp  mocks.h  pt_gs_k_test.cpp  pt_hps_k_test.cpp  pt_hs_k_test.cpp  pt_ss_k_test.cpp  qm_test.cpp  radiation_dingman_test.cpp  radiation_test.cpp  radiation_ts_test.cpp  routing_test.cpp  serialization_test.cpp  skaugen_test.cpp  test.cbp  test.vcxproj  test.vcxproj.filters  test_ice_packing.cpp  (+16 more)
